added spinner and ajax

--- a/app/views/user_tweets.erb
+++ b/app/views/user_tweets.erb
@@ -1,4 +1,15 @@
 <h1>User Tweets</h1>
-<% @tweets.each do |tweet| %>
-  <p><%= tweet.text %></p>
+
+<input id='twitter_handle' type='hidden' value='<%= @user.twitter_handle %>'></input>
+
+<% if @tweets %>
+  <%=erb :_tweets, :layout => false, :tweets => @tweets %>
+<% else %>
+  <div class="spinner">
+    <%= erb :_spinner, :layout => false %>
+  </div>
+  <div class='user_tweets'></div>
+  <script src="/js/user_profile.js"></script>
 <% end %>
+
+
